--- a/SimpleGameFramework/SimpleGameFramework.vcxproj
+++ b/SimpleGameFramework/SimpleGameFramework.vcxproj
@@ -109,10 +109,13 @@
   <ItemGroup>
     <ClInclude Include="AABB.h" />
     <ClInclude Include="AppConfig.h" />
+    <ClInclude Include="BlueOrb.h" />
     <ClInclude Include="CGameFrameworkApp.h" />
-    <ClInclude Include="Cheesecake.h" />
+    <ClInclude Include="Coin.h" />
     <ClInclude Include="ChildView.h" />
     <ClInclude Include="CPUUtils.h" />
+    <ClInclude Include="Dirt.h" />
+    <ClInclude Include="DirtGrass.h" />
     <ClInclude Include="GameFramework.h" />
     <ClInclude Include="GameInput.h" />
     <ClInclude Include="GameManager.h" />
@@ -121,16 +124,20 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Stone.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TinyXML2\tinyxml2.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AppConfig.cpp" />
+    <ClCompile Include="BlueOrb.cpp" />
     <ClCompile Include="CGameFrameworkApp.cpp" />
-    <ClCompile Include="Cheesecake.cpp" />
+    <ClCompile Include="Coin.cpp" />
     <ClCompile Include="ChildView.cpp" />
     <ClCompile Include="CPUUtils.cpp" />
+    <ClCompile Include="Dirt.cpp" />
+    <ClCompile Include="DirtGrass.cpp" />
     <ClCompile Include="GameFramework.cpp" />
     <ClCompile Include="GameInput.cpp" />
     <ClCompile Include="GameManager.cpp" />
@@ -141,6 +148,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Stone.cpp" />
     <ClCompile Include="TinyXML2\tinyxml2.cpp" />
   </ItemGroup>
   <ItemGroup>
