--- a/SimpleGameFramework/SimpleGameFramework.vcxproj
+++ b/SimpleGameFramework/SimpleGameFramework.vcxproj
@@ -120,9 +120,13 @@
     <ClInclude Include="GameInput.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Heart.h" />
+    <ClInclude Include="Leaves.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Sky.h" />
+    <ClInclude Include="Spikes.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Stone.h" />
     <ClInclude Include="targetver.h" />
@@ -142,8 +146,12 @@
     <ClCompile Include="GameInput.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Heart.cpp" />
+    <ClCompile Include="Leaves.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Sky.cpp" />
+    <ClCompile Include="Spikes.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
