--- a/SimpleGameFramework/SimpleGameFramework.vcxproj
+++ b/SimpleGameFramework/SimpleGameFramework.vcxproj
@@ -123,6 +123,8 @@
     <ClInclude Include="Heart.h" />
     <ClInclude Include="Leaves.h" />
     <ClInclude Include="MainFrm.h" />
+    <ClInclude Include="Observee.h" />
+    <ClInclude Include="Observer.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sky.h" />
@@ -149,6 +151,8 @@
     <ClCompile Include="Heart.cpp" />
     <ClCompile Include="Leaves.cpp" />
     <ClCompile Include="MainFrm.cpp" />
+    <ClCompile Include="Observee.cpp" />
+    <ClCompile Include="Observer.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Sky.cpp" />
     <ClCompile Include="Spikes.cpp" />
