--- a/SimpleGameFramework/SimpleGameFramework.vcxproj.filters
+++ b/SimpleGameFramework/SimpleGameFramework.vcxproj.filters
@@ -120,6 +120,12 @@
     <ClInclude Include="Spikes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Observer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Observee.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CGameFrameworkApp.cpp">
@@ -183,6 +189,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Spikes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Observer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Observee.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
